feat: /users/ API for  retrieving all users
